--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
 body {
     background-image: url("/img/sunset.jpg");
-    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+
 }
