--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
+/*
+
 body {
     background-image: url("/img/sunset.jpg");
     background-size: cover;
     background-attachment: fixed;
 }
+
+*/
+
