--- a/static/css/index.css
+++ b/static/css/index.css
@@ -13,7 +13,7 @@ body {
 
 
 .listPokemon{
-    background: linear-gradient(90deg, var(--color-blanco) 70%, var(--color-rojo-oscuro) 100%);
+    background: var(--color-blanco);
     margin: 10px;
     padding: 0px 10px 0px 0px;
     border-radius:  50px 0px 0px 50px ;    
