--- a/static/css/index.css
+++ b/static/css/index.css
@@ -12,7 +12,7 @@ body {
 }
 
 
-.listPokemon{
+.pokemon-container{
     background: var(--color-blanco);
     margin: 10px;
     padding: 0px 10px 0px 0px;
@@ -23,7 +23,7 @@ p.name {
     text-transform: capitalize;
 }
 
-.listPokemon:hover{
+.pokemon-container:hover{
     margin: 5px;
     background: linear-gradient(90deg, var(--color-blanco) 60%, var(--color-primario-oscuro) 100%);
 }
